tests/baselines/reference/tupleKinds.errors.txt
tests/cases/compiler/tupleKinds.ts(7,5): error TS2322: Type '{}' is not assignable to type '[number, string, boolean, C]'.
  Property '0' is missing in type '{}'.


==== tests/cases/compiler/tupleKinds.ts (1 errors) ====
    function tuple<...T>(...args:...T): ...T {
        return args;
    }
    
    class C { }
    let inferred = tuple(1, "foo", false, new C());
    let match: [number, string, boolean, C] = tuple(1, "foo", false, new C());
        ~~~~~
!!! error TS2322: Type '{}' is not assignable to type '[number, string, boolean, C]'.
!!! error TS2322:   Property '0' is missing in type '{}'.
    function notSupportedYet<...T>(tuple: number | ...T): number {
    	if(typeof tuple === 'number') {
    		return tuple;
    	}
    	else {
    		return -1;
    	}
    }